--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
         <h1>The Perfect Egg Timer</h1>
         <p class="subtitle">For my favorite person ♡</p>
 
-        <div class="egg-container" id="egg-container">
-            <img src="egg.svg" alt="A cute illustration of an egg" class="egg-image">
-        </div>
+        <!-- NEW AND IMPROVED CODE -->
+<div class="egg-container" id="egg-container">
+    <!-- The SVG code is now directly inside the HTML -->
+    <svg fill="#000000" height="100px" width="100px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+        viewBox="0 0 295.38 295.38" xml:space="preserve">
+        <g>
+            <path style="fill:#FEE293;" d="M147.69,295.38c61.983,0,112.962-84.972,112.962-189.558C260.652,44.75,209.673,0,147.69,0
+	        S34.728,44.75,34.728,105.822C34.728,210.407,85.707,295.38,147.69,295.38z"/>
+            <path style="fill:#FDD46E;" d="M260.652,105.822C260.652,44.75,209.673,0,147.69,0v295.38
+	        C209.673,295.38,260.652,210.407,260.652,105.822z"/>
+        </g>
+    </svg>
+</div>
 
         <div class="timer-display" id="timer-display">00:00</div>
 
