--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Perfect Egg Timer</title>
+    <title>Egg Timer for chikkuuu</title>
     
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +16,8 @@
 <body>
 
     <div class="container">
-        <h1>The Perfect Egg Timer</h1>
-        <p class="subtitle">For my favorite person ♡</p>
+        <h1>Egg Timer</h1>
+        <p class="subtitle">For my favorite chikkuupie♡</p>
 
         <!-- NEW AND IMPROVED CODE -->
 <div class="egg-container" id="egg-container">
