--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
     <div class="container">
-        <h1>The Perfect Egg Timer</h1>
-        <p class="subtitle">For my favorite person ♡</p>
+        <h1>Egg Timer</h1>
+        <p class="subtitle">For my favorite Chikkupie  ♡</p>
 
         <div class="egg-container" id="egg-container">
             <!-- The SVG code is now directly inside the HTML -->
