--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container">
         <h1>The Perfect Egg Timer</h1>
-        <p class="subtitle">For my favorite person ♡</p>
+        <p class="subtitle">For my favorite Chikkupiee ♡</p>
 
         <div class="egg-container" id="egg-container">
             <!-- Embedded SVG to ensure it always loads -->
@@ -35,9 +35,8 @@
         <p class="start-time-display" id="start-time-display"></p>
 
         <div class="controls">
-            <button class="timer-button" data-time="240">Soft</button>
-            <button class="timer-button" data-time="360">Medium</button>
-            <button class="timer-button" data-time="720">Perfect</button>
+            
+            <button class="timer-button" data-time="720">Start</button>
         </div>
         
         <button class="reset-button" id="reset-button">Reset</button>
