--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Perfect Egg Timer</title>
+    <title>Time left</title>
     
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
 <body>
 
     <div class="container">
-        <h1>The Perfect Egg Timer</h1>
+        <h1>Egg Timer</h1>
         <p class="subtitle">For my favorite Chikkupiee ♡</p>
 
         <div class="egg-container" id="egg-container">
