--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </div>
     </div>
     
-    <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
+    <audio id="alarmSound" src="alarm.wav" preload="auto"></audio>
 
     <script>
         // --- Get HTML Elements ---
