--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>An Eggcellent Timer for My Love</title>
+    <title>An Eggcellent Timer </title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -156,7 +156,7 @@
 <body>
 
     <div class="container">
-        <h1>For My Dearest</h1>
+        <h1>Egg timer</h1>
         <p class="subtitle">A special timer for your perfect eggs <i class="fa-solid fa-heart" style="color:#ff80ab;"></i></p>
 
         <div id="timerDisplay" class="timer">12:00</div>
