--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </head>
 <body>
 
-    <audio id="alarmSound" src="alarm.mp3" preload="auto" loop></audio>
+    <audio id="alarmSound" src="alarm.wav" preload="auto" loop></audio>
     <audio id="boilingSound" src="boiling.mp3" preload="auto" loop></audio>
 
     <div class="container">
